@@ -1,4 +1,7 @@
 
 SUBDIRS = src
 
-EXTRA_DIST = indent.spec
+EXTRA_DIST = indent.spec.in
+
+dist-hook:
+	cp $(top_srcdir)/indent.spec $(distdir)
